force-app/main/default/objects/recTypesRBA__c/recTypesRBA__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - Registration Bank Account</label>
</CustomObject>