force-app/main/default/objects/recTypesRBA__c/fields/Funding_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Funding_Read_Only__c</fullName>
    <label>Funding Read Only</label>
    <length>18</length>
    <type>Text</type>
</CustomField>