force-app/main/default/objects/recTypesRBA__c/fields/Other_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Other_Read_Only__c</fullName>
    <label>Other Read Only</label>
    <length>18</length>
    <type>Text</type>
</CustomField>